--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             </section>
 
             <section class="photo-grid">
-                <img class="photo-grid__item" src="./images/photo-grid-train.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg">
+                <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="картинка загружается">
+                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="картинка загружается">
             </section>
 
             <section class="places">
@@ -156,7 +156,7 @@
 
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
-                    
+
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
